src/test/deca/context/valid/custom/Declaration/decl_string.deca
// Description:
//   Declaration of a String and print it on the standard output.
// Results:
//    Line 11: display a String on the standard output.
//
// History:
//    created on 11/01/2022

{
   String s = "Hello le monde";
   println(x);
}
