src/test/deca/context/invalid/custom/decl_null.deca
// Description:
//   initialization of a int and a float to null.
// Results:
//    Line 11:
//
// History:
//    created on 21/01/2022

{
int b = null;
float c = null;
}

